--- a/app/globals.css
+++ b/app/globals.css
@@ -209,8 +209,14 @@
   * {
     @apply border-border outline-ring/50;
   }
+
+  html {
+    @apply scroll-smooth;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overscroll-none;
+    font-synthesis-weight: none;
+    text-rendering: optimizeLegibility;
   }
 
   /* Custom scrollbar styling. Thanks @pranathiperii. */
